Update file system to include dirs: Pages, Components, Layout, Circle, Homepage

--- a/public/index.html
+++ b/public/index.html
@@ -1,30 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta charset="UTF-8" />
+    <meta content="IE=edge" http-equiv="X-UA-Compatible" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta
+      content="An independent public relations firm and creative studio"
       name="description"
-      content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="logo192.png" />
+    <meta
+      name="keywords"
+      content="Music Pouch, Music, public relations, artists management, Austin, Houston, Texas, creative, technologist, creative technologist, Digital Creative, music pouch, esrosn, esos son reebok o son nike, were listening to, designer, developer"
+    />
+    <meta name="author" content="Music Pouch" />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="%PUBLIC_URL%/favicon_io/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="%PUBLIC_URL%/favicon_io/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="%PUBLIC_URL%/favicon_io/favicon-16x16.png"
+    />
+    <link rel="manifest" href="%PUBLIC_URL%/favicon_io/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="%PUBLIC_URL%/favicon_io/safari-pinned-tab.svg"
+    />
+    <link
+      rel="shortcut icon"
+      href="%PUBLIC_URL%/favicon_io/favicon.ico"
+      type="image/x-icon"
+    />
+    <meta name="msapplication-TileColor" content="#000000" />
+    <meta name="theme-color" content="#ffffff" />
+    <meta
+      property="og:image"
+      content="http://www.musicpouch.us/favicon_io/og-image.jpg"
+    />
+    <meta property="og:image:width" content="300" />
+    <meta property="og:image:height" content="300" />
+    <meta property="og:title" content="Music Pouch" />
+    <meta
+      property="og:description"
+      content="An independent public relations firm and creative studio"
+    />
+    <meta property="og:url" content="http://www.musicpouch.us" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@musicpouch" />
+    <meta name="twitter:creator" content="@musicpouch" />
+    <meta name="twitter:title" content="Music Pouch" />
+    <meta
+      name="twitter:description"
+      content="An independent public relations firm and creative studio"
+    />
+    <meta
+      name="twitter:image"
+      content="http://www.musicpouch.us/favicon_io/og-image.jpg"
+    />
+    <meta name="twitter:domain" content="http://www.musicpouch.us" />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1,shrink-to-fit=no"
+    />
+    <meta name="theme-color" content="#000000" />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/tachyons/4.11.1/tachyons.css"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
-
+      
       Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Music Pouch</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
