--- a/public/index.html
+++ b/public/index.html
@@ -93,7 +93,7 @@
     -->
     <title>Music Pouch</title>
   </head>
-  <body>
+  <body class="sans-serif">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
